# Proyecto-de-programacion-orientada-al-rendimiento

./: .gitignore  CMakeLists.txt  TODO
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  infoops.cpp  infoops.hpp  progargs.cpp  progargs.hpp
imgaos/: CMakeLists.txt
imgsoa/: CMakeLists.txt
imtool-aos/: CMakeLists.txt  main.cpp
utest-common/: CMakeLists.txt  proargs_test.cpp
